# identification

./: .dockerignore  .env  .gitignore  .server_runtime.env  Cargo.toml  DOCKER_GPU.md  Dockerfile  docker-compose.yml  nohup.out  start_all.sh  start_docker.sh  stop_all.sh  stop_docker.sh
audio-worker/: Cargo.toml
audio-worker/models/: aasist.onnx  aasist.onnx.data
audio-worker/src/: main.rs
client/: admin.py  biometry_pb2.py  biometry_pb2_grpc.py  check_hardware.py  check_logs.py  check_zones.py  stress_test.py  test_conn.py
docs/: admin_help.md  gpu-setup-cachyos.md  user_guide.md
door-agent/: Cargo.toml
door-agent/src/: main.rs
gateway-service/: Cargo.toml
gateway-service/src/: main.rs
hardware-controller/: Cargo.toml  build.rs
hardware-controller/src/: main.rs
migrations/: 20260101_init.sql  20260127_add_logs.sql  20260130_add_voice.sql  20260201_update_access_and_devices.sql  20260202_harden_access_and_devices.sql  20260203_normalize_access_to_rooms.sql
proto/: biometry.proto
shared/: Cargo.toml  build.rs
shared/src/: lib.rs
vision-worker/: Cargo.toml
vision-worker/src/: main.rs
