[workspace]
resolver = "2"
members = [
    "gateway-service",
    "vision-worker",
    "audio-worker",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Team Biometry"]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
