[package]
name = "gateway-service"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
pgvector = { version = "0.4", features = ["sqlx"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"