[package]
name = "vision-worker"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

image = "0.24"
ndarray = "0.16"

axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
tower-http = { version = "0.5", features = ["trace", "cors"] }

[dependencies.ort]
version = "=2.0.0-rc.9"
features = ["cuda", "half", "tls-rustls"]
